syntax = "proto3";

import "google/protobuf/empty.proto";

package kms;

message GetAppKeyRequest {
  // The app compose file
  string app_compose = 2;
}

// The kms public RPC service.
service KMS {
  // Request the app key given the app id and tdx quote
  rpc GetAppKey(GetAppKeyRequest) returns (AppKeyResponse) {
    // Retrieves the app key and certificate given the app id and tdx quote
  }
  // Request the app environment encryption public key given the app id
  rpc GetAppEnvEncryptPubKey(AppId) returns (PublicKeyResponse) {
    // Retrieves the app environment encryption public key given the app id
  }
  // Request the KMS instance metadata for use as a probe and health check.
  rpc GetMeta(google.protobuf.Empty) returns (GetMetaResponse) {
  }
}

message AppId {
  string app_id = 1;
}

message PublicKeyResponse {
  bytes public_key = 1;
}

message AppKeyResponse {
  string app_key = 1;
  bytes disk_crypt_key = 2;
  bytes env_crypt_key = 3;
  repeated string certificate_chain = 4;
  bytes app_ecdsa_key = 5;
  bytes app_ecdsa_signature = 6;
}

message GetMetaResponse {
  string ca_cert = 1;
  bool allow_any_upgrade = 2;
}